# resolve-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/resolve_ai/: __init__.py  __main__.py  ai_analyzer.py  cli.py  config.py  frame_capture.py  metadata_writer.py  models.py  resolve_connection.py
tests/: conftest.py  test_ai_analyzer.py  test_cli.py  test_frame_capture.py  test_metadata_writer.py
