[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolve-ai"
version = "0.1.0"
description = "AI-powered scene analysis for DaVinci Resolve using Claude Vision"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chad Littlepage" },
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
resolve-ai = "resolve_ai.cli:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["DaVinciResolveScript"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
